智能车tc264遥控器控制小车例程

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>E03_uart_receiver_demo</name>
+	<name>tc264_remote_controller_demo</name>
 	<comment></comment>
 	<projects>
 	</projects>
